重新配置地图 2 的配置。

--- a/maps/2/meta.ini
+++ b/maps/2/meta.ini
@@ -3,12 +3,12 @@ size_x=512
 size_y=512
 
 [altmap]
-alt_scale=32
+alt_scale=256
 blur=4
 
 [texture]
-source=texture.bmp
-positions=0
+source=tex1.bmp|tex2.bmp|texture.bmp
+positions=0,8,16,20
 scale=1
 
 [scene]
